frontend/test/should_pass/set_005.grg
using set_model_002;

rule setSize {
	a:A;
	
	if { a.intSet.size()==42; }
	
	modify {
		eval {
			a.intValue = a.stringSet.size();
		}
	}
}